Fixed jumping div

--- a/frontend/css/viewer.css
+++ b/frontend/css/viewer.css
@@ -41,6 +41,7 @@ div {
 }
 
 #data {
+    min-height: 258px;
     padding-top: 0px;
     margin-top: 20px;
     margin-left: 5px;
@@ -67,11 +68,19 @@ div {
     display: none;
 }
 
+.stats-header {
+    margin: 0px;
+    color: white;
+    text-align: center;
+    padding: 5px;
+}
+
 .stats {
     margin: 0px;
     color: white;
     text-align: center;
     padding: 5px;
+    visibility: hidden;
 }
 
 .stath {
